...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UNKNOWN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sy-3d-vMx">
                                <rect key="frame" x="134" y="59" width="88" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="signInStateLabel">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eLk-CO-U3Z">
                                <rect key="frame" x="159.5" y="540" width="56" height="30"/>
                                <state key="normal" title="SignOut"/>
                                <connections>
                                    <action selector="onSignOutClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k6R-7W-Ekf"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDE-Go-KtQ">
                                <rect key="frame" x="135" y="160" width="105" height="30"/>
                                <state key="normal" title="DropIn UI Tests"/>
                                <connections>
                                    <segue destination="zxF-Vv-Hr2" kind="show" id="MRs-QE-nRB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhd-B0-ND4">
                                <rect key="frame" x="107" y="92" width="161" height="30"/>
                                <state key="normal" title="Drop In User Pool Tests"/>
                                <connections>
                                    <segue destination="r46-A3-owT" kind="show" id="wW5-3F-S6b"/>
...
        <scene sceneID="ptf-Iv-NK2">
            <objects>
                <viewController title="DropIn UserPool" id="r46-A3-owT" customClass="DropInUIUserPoolViewController" customModule="AWSAuthSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="hc9-ol-7Uc">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bSk-IR-WaP">
                                <rect key="frame" x="148" y="146" width="79" height="30"/>
                                <state key="normal" title="SignIn User"/>
                                <connections>
                                    <action selector="onLaunchCognitoAuthSignIn:" destination="r46-A3-owT" eventType="touchUpInside" id="HS0-xc-BaT"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAf-Rr-YwL">
                                <rect key="frame" x="116" y="272" width="143" height="30"/>
                                <state key="normal" title="User pool operations"/>
                                <connections>
                                    <segue destination="mG6-DT-ukZ" kind="show" id="oIV-qf-1As"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlk-8p-X7B">
                                <rect key="frame" x="166.5" y="92" width="24" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="userPoolSignInStateLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.1166862764" green="0.24307424650000001" blue="0.60000404789999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="WNH-XR-mxG">
            <objects>
                <viewController title="User Details" id="mG6-DT-ukZ" customClass="UserDetailsViewController" customModule="AWSAuthSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4dj-LO-8RH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="center" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLI-09-drv">
                                <rect key="frame" x="77" y="105.5" width="17" height="14.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="idTokenLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziK-LP-NrU">
                                <rect key="frame" x="106" y="130.5" width="17" height="14.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="accessTokenLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRM-3a-3E0">
                                <rect key="frame" x="108" y="155.5" width="17" height="14.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="refreshTokenLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="112" y="512" width="151" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Update User Attribute"/>
                                <connections>
