...
            </objects>
            <point key="canvasLocation" x="-2535" y="939"/>
        </scene>
        <!--Update Password-->
        <scene sceneID="ro3-wD-2wV">
            <objects>
                <viewController title="Update Password" id="Wwt-zD-yTe" customClass="AWSUserPoolNewPasswordViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="FqQ-ca-9Q7"/>
                        <viewControllerLayoutGuide type="bottom" id="FoP-6q-Q3y"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="sSU-fu-YjH">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
...
                                <rect key="frame" x="20" y="138" width="280" height="40"/>
                                <color key="backgroundColor" systemColor="systemBlueColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="mo9-O9-pFi"/>
                                    <constraint firstAttribute="width" constant="280" id="uKw-Hh-ccP"/>
                                </constraints>
                                <state key="normal" title="Sign In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="Hj0-Fe-dMV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your new password below" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzB-cM-Tyh">
                                <rect key="frame" x="27" y="18" width="266" height="18"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
...
